# googlebooks-rs

./: Cargo.toml  README.md  pre-commit.sh
.github/: anaylsis.yml
.github/workflows/: analysis.yml  publish.yml
examples/: basic.rs
src/: errors.rs  lib.rs  models.rs  queries.rs
