[package]
name = "googlebooks-rs"
version = "0.2.1"
edition = "2021"
authors = ["Gabatxo <gabatxo@kl.netlib.re>"]
description = "A Rust client library for the Google Books API"
readme = "README.md"
repository = "https://github.com/Gabatxo1312/googlebooks-rs"
license = "AGPL-3.0-or-later"
keywords = ["google", "books", "api", "client"]
categories = ["api-bindings", "web-programming::http-client"]
exclude = ["pre-commit.sh", ".github/", ".gitignore", "examples/"]

[dependencies]
http = "1.4.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
snafu = "0.8.9"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
